<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="homeFragment"
            type="com.example.stakasaki.coffeeorder.home.HomeFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_imageview_home"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_marginTop="64dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/coffee_logo2" />

        <TextView
            android:id="@+id/select_menu_textview_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/select_a_menu"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/logo_imageview_home"
            app:layout_constraintStart_toStartOf="@+id/logo_imageview_home"
            app:layout_constraintTop_toBottomOf="@+id/logo_imageview_home" />

        <Button
            android:id="@+id/coffee_1cup_button_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/coffee_1_cup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_menu_textview_home"
            android:onClick="@{() -> homeFragment.orderCoffee(0)}"/>

        <Button
            android:id="@+id/coffee_dessert_button_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/coffee_with_dessert"
            app:layout_constraintEnd_toEndOf="@+id/coffee_1cup_button_home"
            app:layout_constraintStart_toStartOf="@+id/coffee_1cup_button_home"
            app:layout_constraintTop_toBottomOf="@+id/coffee_1cup_button_home"
            android:onClick="@{() -> homeFragment.orderCoffee(1)}"/>

        <Button
            android:id="@+id/coffee_mornig_button_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/coffee_mornig"
            app:layout_constraintEnd_toEndOf="@id/coffee_dessert_button_home"
            app:layout_constraintStart_toStartOf="@id/coffee_dessert_button_home"
            app:layout_constraintTop_toBottomOf="@id/coffee_dessert_button_home"
            android:onClick="@{() -> homeFragment.orderCoffee(2)}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>