<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_imageview_login"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_coffee_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mail_textfield_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            app:layout_constraintTop_toBottomOf="@id/logo_imageview_login"
            app:layout_constraintStart_toStartOf="@id/logo_imageview_login"
            app:layout_constraintEnd_toEndOf="@id/logo_imageview_login"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textfield_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@id/mail_textfield_login"
            app:layout_constraintStart_toStartOf="@id/mail_textfield_login"
            app:layout_constraintTop_toBottomOf="@id/mail_textfield_login">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button__login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/password_textfield_login"
            app:layout_constraintStart_toStartOf="@+id/password_textfield_login"
            app:layout_constraintTop_toBottomOf="@+id/password_textfield_login" />

        <TextView
            android:id="@+id/to_register_textview_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/login_button__login"
            app:layout_constraintStart_toStartOf="@+id/login_button__login" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>