<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".registerlogin.RegisterFragment">
    
    <data>
        <variable
            name="viewModel"
            type="com.example.stakasaki.coffeeorder.registerlogin.RegisterLoginViewModel" />

        <variable
            name="registerFragment"
            type="com.example.stakasaki.coffeeorder.registerlogin.RegisterFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/logo_imageview_register"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_coffee_shop_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_textfield_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="@id/logo_imageview_register"
            app:layout_constraintStart_toStartOf="@id/logo_imageview_register"
            app:layout_constraintTop_toBottomOf="@id/logo_imageview_register">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mail_textfield_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/mail"
            app:layout_constraintEnd_toEndOf="@id/username_textfield_register"
            app:layout_constraintStart_toStartOf="@id/username_textfield_register"
            app:layout_constraintTop_toBottomOf="@id/username_textfield_register">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textfield_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@id/mail_textfield_register"
            app:layout_constraintStart_toStartOf="@id/mail_textfield_register"
            app:layout_constraintTop_toBottomOf="@id/mail_textfield_register">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/password_textfield_register"
            app:layout_constraintStart_toStartOf="@+id/password_textfield_register"
            app:layout_constraintTop_toBottomOf="@+id/password_textfield_register"
            android:onClick="@{() -> registerFragment.onClickRegisterButton()}"/>

        <TextView
            android:id="@+id/back_to_login_textview_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/already_have_an_account_login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/register_button_register"
            app:layout_constraintStart_toStartOf="@+id/register_button_register"
            android:onClick="@{() -> registerFragment.goBackToLogin()}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>